# rust-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml
.github/: dependabot.yml
.github/workflows/: after-release-please.yml  publish-docs.yml  publish.yml  release-please.yml  test.yml
src/: lib.rs  main.rs
