[package]
name = "rust-lib"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "v0.3.1", git = "https://github.com/majksa-dev/rust-essentials" }
chrono = { version = "0.4.20", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.7"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
rand = "0.8"
slab = "0.4"
serde = "1.0.197"
serde_json = "1.0.114"