[package]
name = "rust-lib"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.7", git = "https://github.com/majksa-dev/rust-essentials" }
chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "serde",
] }
derive_more = { version = "1.0.0", features = ["std"] }
futures-util = "0.3.30"
rand = "0.8.5"
slab = "0.4.9"
serde = "1.0.208"
serde_json = "1.0.125"
